Product page Responsive

--- a/product-page.html
+++ b/product-page.html
@@ -96,41 +96,43 @@
 
     <div class="container">
       <div class="column-left">
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/old_money_t-shirt_white.jpg"
-          alt="small1"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/main-image-1_4620b553-657d-4ead-b0eb-ee33fe91bf2b.jpg?v=1705945350&width=1000"
-          alt="small2"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/IMG-4556.jpg?v=1713167164&width=800"
-          alt="small3"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/IMG-4557.jpg?v=1709161451&width=800"
-          alt="small4"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/IMG-4555.jpg?v=1713167164&width=800"
-          alt="small5"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/main-image-1_8b6e9e69-ac97-4c16-8faf-056bea95ca23.jpg?v=1705941738&width=1000"
-          alt="small6"
-          class="small-image"
-        />
-        <img
-          src="https://wearoldmoney.com/cdn/shop/files/006_2ae361d2-3549-4b43-8331-0c858f6c5a4e.jpg?v=1702477794&width=700"
-          alt="small7"
-          class="small-image"
-        />
+        <div class="image-row">
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/old_money_t-shirt_white.jpg"
+            alt="small1"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/main-image-1_4620b553-657d-4ead-b0eb-ee33fe91bf2b.jpg?v=1705945350&width=1000"
+            alt="small2"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/IMG-4556.jpg?v=1713167164&width=800"
+            alt="small3"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/IMG-4557.jpg?v=1709161451&width=800"
+            alt="small4"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/IMG-4555.jpg?v=1713167164&width=800"
+            alt="small5"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/main-image-1_8b6e9e69-ac97-4c16-8faf-056bea95ca23.jpg?v=1705941738&width=1000"
+            alt="small6"
+            class="small-image"
+          />
+          <img
+            src="https://wearoldmoney.com/cdn/shop/files/006_2ae361d2-3549-4b43-8331-0c858f6c5a4e.jpg?v=1702477794&width=700"
+            alt="small7"
+            class="small-image"
+          />
+        </div>
       </div>
       <div class="column-center">
         <img
