cart page Responsive

--- a/cart-page.html
+++ b/cart-page.html
@@ -100,38 +100,35 @@
           <a href="#">Home</a> <span>></span> Your Shopping Cart
         </p>
       </div>
-
-      <div class="product-list">
-        <div class="product-total">Total</div>
-
-        <div class="product-header">
-          <div class="product-col">Product</div>
-          <div class="product-col">Price</div>
-          <div class="product-col">Quantity</div>
+      <!-- aqui inicia -->
+      <div class="cart-container">
+        <div class="cart-header">
+          <div class="header-item">Product</div>
+          <div class="header-item">Price</div>
+          <div class="header-item">Quantity</div>
+          <div class="header-item">Total</div>
+        </div>
+      
+        <div class="cart-item">
+          <div class="product-info">
+            <img src="https://wearoldmoney.com/cdn/shop/files/old_money_t-shirt_white.jpg" alt="Product Image" class="product-image">
+            <div class="product-details">
+              <div class="product-name">Mini Dress With Ruffled Straps</div>
+              <div class="item-color">Color: Red</div>
+              <a href="#" class="remove-link">Remove</a>
+            </div>
+          </div>
+          <div class="price">$14.90</div>
+          <div class="item-quantity">
+            <button class="qty-btn">-</button>
+            <span class="qty-number">01</span>
+            <button class="qty-btn">+</button>
+          </div>
+          <div class="total">$14.90</div>
         </div>
       </div>
 
-      <div class="cart-item">
-        <div class="cart-item__image">
-          <img
-            src="https://wearoldmoney.com/cdn/shop/files/old_money_t-shirt_white.jpg"
-            alt="Product Image"
-          />
-        </div>
-        <div class="cart-item__details">
-          <h3 class="cart-item__title">Mini Dress With Ruffled Straps</h3>
-          <p class="cart-item__color">Color: Red</p>
-          <a href="#" class="cart-item__remove">Remove</a>
-        </div>
-        <div class="cart-item__price">$14.9000</div>
-        <div class="cart-item__quantity">
-          <button class="quantity-btn">-</button>
-          <input type="text" class="quantity-input" value="01" />
-          <button class="quantity-btn">+</button>
-        </div>
-        <div class="cart-item__total-price">$14.90</div>
-      </div>
-
+      <!-- aqui finaliza -->
       <div class="checkout-container">
         <div class="wrap-product">
           <label>
